java version compatibility updates (#87)