@@ -209,9 +209,9 @@ public class SwiftParser {
     static public SwiftBlock2 parseBlock2(String s) {
         if (s != null) {
             Character block2Type = extractBlock2Type(s);
-            if (new Character('I').equals(block2Type)) {
+            if (Character.valueOf('I').equals(block2Type)) {
                 return enrichBlockType(new SwiftBlock2Input(StringUtils.strip(s, "{}"), true), "I");
-            } else if (new Character('0').equals(block2Type)) {
+            } else if (Character.valueOf('0').equals(block2Type)) {
                 return enrichBlockType(new SwiftBlock2Output(StringUtils.strip(s, "{}"), true), "O");
             } else if (s.length() <= 23) {
                 return new SwiftBlock2Input(StringUtils.strip(s, "{}"), true);
@@ -478,9 +478,9 @@ public class SwiftParser {
 
     private SwiftBlock2 createBlock2(final String s) {
         Character block2Type = extractBlock2Type(s);
-        if (new Character('I').equals(block2Type)) {
+        if (Character.valueOf('I').equals(block2Type)) {
             return enrichBlockType(createBlock2Input(s),"I");
-        } else if (new Character('O').equals(block2Type)) {
+        } else if (Character.valueOf('O').equals(block2Type)) {
             return enrichBlockType(createBlock2Output(s),"O");
         } else {
             final String error = "Expected an \"I\" or \"O\" to identify " +
